# picinplace

./: README.md  config.json  install.sh  main.py  pyproject.toml  server.py
sys/: picinplace.service
